sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:11: error: not found: value sestValeur
    sestValeur(M,v)
    ^